<resources>
    <string name="app_name">mycalc</string>
    <string name="buttonthree">3</string>
    <string name="buttontwo">2</string>
    <string name="buttonone">1</string>
    <string name="buttonfour">4</string>
    <string name="buttonfive">5</string>
    <string name="buttonsix">6</string>
    <string name="buttonseven">7</string>
    <string name="buttoneight">8</string>
    <string name="buttonnine">9</string>
    <string name="buttonsub">-</string>
    <string name="buttonzero">0</string>
    <string name="buttonadd">+</string>
    <string name="buttonmul">*</string>
    <string name="buttondiv">/</string>
    <string name="buttonequal">=</string>
    <string name="buttonC">C</string>
</resources>
