<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mycalc.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:elevation="0dp"
        android:text="@string/buttonone"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="133dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttontwo"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="133dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonthree"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="133dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonfour"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonfive"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonsix"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonseven"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttoneight"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonnine"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/buttonS"
        android:layout_width="101dp"
        android:layout_height="70dp"
        android:text="@string/buttonsub"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonA" />

    <Button
        android:id="@+id/button0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonzero"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        android:layout_marginLeft="94dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="101dp"
        android:layout_height="70dp"
        android:text="@string/buttonadd"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="133dp" />

    <Button
        android:id="@+id/buttonM"
        android:layout_width="101dp"
        android:layout_height="70dp"
        android:text="@string/buttonmul"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonS" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="101dp"
        android:layout_height="70dp"
        android:elevation="0dp"
        android:text="@string/buttondiv"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonM"
        app:layout_constraintLeft_toRightOf="@+id/buttonC"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:text="@string/buttonequal"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/buttonC"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="351dp"
        android:layout_height="94dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

</android.support.constraint.ConstraintLayout>
